Apply suggestions from code review
Missed these on my first pass of the review comments.

Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/qiskit-addons-cutting-wires.ipynb
+++ b/docs/guides/qiskit-addons-cutting-wires.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Get started with circuit cutting using wire cuts\n",
     "\n",
-    "This guide demonstrates a working example of using wire cuts to get started with the `qiskit-addon-cutting` package. It will cover reconstructing expectation values of a seven-qubit circuit using wire cutting and reducing circuit depth and width using gate cutting.\n",
+    "This guide demonstrates a working example of wire cuts with the `qiskit-addon-cutting` package. It covers reconstructing expectation values of a seven-qubit circuit using wire cutting and reducing circuit depth and width using gate cutting.\n",
     "\n",
     "A wire cut is represented in this package as a two-qubit [`Move`](../api/qiskit-addon-cutting/instructions-move) instruction, which is defined as a reset of the second qubit the instruction acts on followed by a swap of both qubits. This operation is equivalent to transferring the state of the first qubit to the second qubit, while simultaneously discarding the state of the second qubit (as in, the first qubit ends up in the state $|0\\rangle$).\n",
     "\n",
-    "The package is designed this way primarily because it is consistent with the way you must treat wire cuts when acting on physical qubits. For example, a wire cut might take the state of physical qubit $n$ and continue it as a physical qubit $m$ after the cut. This choice also has the benefit of allowing you to think of \"instruction cutting\" as a unified framework for considering both wire and gate cuts within the same formalism (since a wire cut is just a cut [`Move`](../api/qiskit-addon-cutting/instructions-move) instruction).\n",
+    "The package is designed to be consistent with the way you must treat wire cuts when acting on physical qubits. For example, a wire cut might take the state of physical qubit $n$ and continue it as a physical qubit $m$ after the cut. You can think of \"instruction cutting\" as a unified framework for considering both wire and gate cuts within the same formalism (since a wire cut is just a cut [`Move`](/api/qiskit-addon-cutting/instructions-move) instruction).\n",
     "\n",
     "To demonstrate expectation value reconstruction after wire cutting, first create a circuit with several non-local gates and define observables to estimate."
    ]
@@ -76,9 +76,9 @@
    "id": "34609068-25a7-4aae-b786-836984d305d2",
    "metadata": {},
    "source": [
-    "The wire to be cut will be made at qubit $q_3$ by manually placing `Move` instructions in a new circuit with one extra qubit, but for this to work properly, it is important that the second (destination) qubit share no entanglement with the remainder of the system; otherwise, the reset operation will cause the state of the remainder to partially collapse. In order to avoid this in this example, we will include a second `Move` instruction which is reversed.\n",
+    "Make the wire cut at qubit $q_3$ by manually placing `Move` instructions in a new circuit with one extra qubit - but for this to work properly, the second (destination) qubit must share no entanglement with the remainder of the system; otherwise, the reset operation will cause the state of the remainder to partially collapse. In this example, you can avoid this by including a second `Move` instruction, which is reversed.\n",
     "\n",
-    "When adding in the `Move` instructions, a new observable should be created to account for the extra qubit wire that was added. This can be done by including an extra $I$ at index $4$."
+    "When adding in the `Move` instructions, a new observable should be created to account for the added qubit wire. Do this by including an extra $I$ at index $4$."
    ]
   },
   {
@@ -126,14 +126,14 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"information\" title=\"Note\">\n",
-    "    As an alternative to working directly with [`Move`](../api/qiskit-addon-cutting/instructions-move) instructions, you may choose to mark wire cuts using a single-qubit [`CutWire`](../api/qiskit-addon-cutting/instructions-cut-wire) instruction. Once the subexperiments are prepared to be executed, use the [`cut_wires`](../api/qiskit-addon-cutting/qiskit-addon-cutting#cut_wires) method to transform `CutWire` to `Move` instructions on newly allocated qubits. However, in contrast to the manual method, this automatic method does not allow for re-use of qubit wires.\n",
+    "    As an alternative to working directly with [`Move`](/api/qiskit-addon-cutting/instructions-move) instructions, you can choose to make wire cuts using a single-qubit [`CutWire`](/api/qiskit-addon-cutting/instructions-cut-wire) instruction. Once the subexperiments are prepared to be executed, use the [`cut_wires`](/api/qiskit-addon-cutting/qiskit-addon-cutting#cut_wires) method to transform `CutWire` to `Move` instructions on newly allocated qubits. However, in contrast to the manual method, this automatic method does not allow for re-use of qubit wires.\n",
     "</Admonition>\n",
     "\n",
     "### Separate the circuit and observable\n",
     "\n",
-    "Now that the circuit includes `Move` instructions to represent wire cuts, the problem can be separated into partitions. This is accomplished using the [`partition_problem`](../api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method with a set of partition labels to specify how the circuit is separated. Qubits sharing a common partition label will be grouped together, and any non-local gates spanning more than one partition will be cut.\n",
+    "Now that the circuit includes `Move` instructions to represent wire cuts, the problem can be separated into partitions. This is accomplished using the [`partition_problem`](/api/qiskit-addon-cutting/qiskit-addon-cutting#partition_problem) method with a set of partition labels to specify how the circuit is separated. Qubits sharing a common partition label are grouped together, and any non-local gates spanning more than one partition are cut.\n",
     "\n",
-    "In this partitioning scheme, we will have cut two wires, which results in a sampling overhead of $4^4$."
+    "In this partitioning scheme, you have cut two wires, resulting in a sampling overhead of $4^4$."
    ]
   },
   {
@@ -208,7 +208,7 @@
    "source": [
     "### Generate subexperiments to execute and post-process results\n",
     "\n",
-    "To estimate the expectation value of the full-sized circuit, several subexperiments are generated from the decomposed gates' joint quasiprobability distribution and then executed on one (or more) QPUs. The [`generate_cutting_experiments`](../api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method will accomplish this by ingesting arguments for the `subcircuits` and `subobservables` dictionaries we created above as well as the number of samples to take from the distribution.\n",
+    "To estimate the expectation value of the full-sized circuit, several subexperiments are generated from the decomposed gates' joint quasi-probability distribution and then executed on one (or more) QPUs. The [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method does this by ingesting arguments for the `subcircuits` and `subobservables` dictionaries you created above, as well as for the number of samples to take from the distribution.\n",
     "\n",
     "The following code block generates the subexperiments and executes them using a local simulator. (To run these on a QPU, change the `backend` to your chosen QPU resource.)"
    ]
@@ -254,7 +254,7 @@
    "id": "adbf1366-7f9d-47b0-967c-d26feb4bf7b1",
    "metadata": {},
    "source": [
-    "Lastly the expectation value of the full circuit can be reconstructed using the [`reconstruct_expectation_values`](../api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
+    "Lastly, the expectation value of the full circuit can be reconstructed using the [`reconstruct_expectation_values`](/api/qiskit-addon-cutting/qiskit-addon-cutting#reconstruct_expectation_values) method.\n",
     "\n",
     "The code block below reconstructs the results and compares them with the exact expectation value."
    ]
