Address review comments

--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -70,7 +70,7 @@ Creating utility-scale quantum applications generally requires a variety of comp
 - Persist long-running workloads in the cloud, even if your laptop is turned off
 - Deploy reusable programs in the cloud
 
-If you'd like to start using Qiskit Serverless right, install it with pip:
+To start using Qiskit Serverless right away, install it with pip:
 ```bash
 pip install qiskit_serverless
 ```
@@ -85,7 +85,7 @@ Qiskit Functions (`qiskit-ibm-catalog.QiskitFunctionsCatalog`) are abstracted se
 
 Premium Plan members can access IBM-provided functions right away, or purchase licenses for the partner-provided functions directly from those partners.
 
-The catalog can be installed via pip:
+The catalog can be installed with pip:
 ```bash
 pip install qiskit-ibm-catalog
 ```
@@ -93,9 +93,36 @@ pip install qiskit-ibm-catalog
 ## Qiskit Transpiler as a Service
 The Qiskit Transpiler Service ([package name `qiskit-ibm-transpiler`](https://pypi.org/project/qiskit-ibm-transpiler/)) is a new experimental service that provides remote transpilation capabilities on the cloud to IBM Quantum Premium Plan users. In addition to the local Qiskit SDK transpiler capabilities, your transpilation tasks can benefit from both IBM Quantum cloud resources and AI-powered transpiler passes using this service. To learn more about how to integrate cloud-based transpilation into your Qiskit workflow you can [check out the documentation](./qiskit-transpiler-service).
 
+The transpiler service can be installed with pip:
+```bash
+pip install qiskit-ibm-transpiler
+```
+
 ## Qiskit addons
 
 Qiskit addons are a collection of research capabilities for utility-scale algorithm discovery. These capabilities build upon Qiskit’s performant foundation of tools for creating and running quantum algorithms. Addons are modular software components that plug into a workflow to scale or design new quantum algorithms. To learn more about the set of available Qiskit addons and how to get started using them, visit the [documentation](/guides/addons).
+
+There are a number of addons depending on what research capability you are interested in. Each of them can be installed with pip.
+
+[Sample-based quantum diagonalization (SQD)](/guides/qiskit-addons-sqd):
+```bash
+pip install qiskit-addon-sqd
+```
+
+[Approximate quantum compilation (AQC)](/guides/qiskit-addons-aqc):
+```bash
+pip install qiskit-addon-aqc-tensor[quimb-jax]
+```
+
+[Operator backpropagation (OBP)](/guides/qiskit-addons-obp):
+```bash
+pip install qiskit-addon-obp
+```
+
+[Multi-product formulas (MPF)](/guides/qiskit-addons-mpf):
+```bash
+pip install qiskit-addon-mpf
+```
 
 ## The Qiskit ecosystem
 
