--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -94,7 +94,7 @@ Scroll to see the full table.
 |                      | zne_mitigation           |                         | `True`/`False`                                                                         | `False`                     |                      |
 |                      | [zne](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions)                      | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
 |                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
-|                      |                          | extrapolator            | one or more of `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |                      |
+|                      |                          | extrapolator            | one or more of `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'`<br />`'fallback'` | (`'exponential'`, `'linear'`) |                      |
 | [resilience_level](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
 | [seed_estimator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)       |                          |                         |  integer         |     `None`               |   seed_estimator   |
 | [simulator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                |                     |   simulator   |
