--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -130,7 +130,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
     Then open your notebook as follows:
 
       ```shell
-      jupyter notebook <path/to/notebook>.ipynb
+      jupyter notebook <path/to/notebook.ipynb>
       ```
 
 If you are planning to work locally and use simulators built into Qiskit, then your installation is done. If you want to run jobs on IBM QPUs, next [select an access channel](setup-channel) and finish your setup.
