add in meas_type

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -131,6 +131,7 @@ Scroll to see the full table.
 |                      | private                  |                         |`True`/`False`                                                                      |`False`                           |                      |
 | [execution](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2)            |                          |                         |                     |                           |                    |
 |                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |    execution    |
+|                      | meas_type                |                         | `classified`/`kerneled`/`avg_kerneled`                              | `classified`|                    |
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.                                | Given by `backend.default_rep_delay`.|                    |
 | [max_execution_time](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)   |       |       | Integer number of seconds in the range  [1, 10800]  | `10800` (3 hours)                      |                    |
 | [simulator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                               |                     |    max_execution_time  |
