--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -67,14 +67,15 @@ Scroll to see the full table.
 | [default_precision](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
 | [dynamical_decoupling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) |                          |                         |              |                     | dynamical_decoupling |
 |                      | enable                   |                         | `True`/`False`                                                             |    `False`           |                      |
-|                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                         | `'XX'`                      |                      |
-|                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                  | `'middle'`                  |                      |
-|                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                      | `'alap'`                    |                      |
+|                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                         | `XX`                      |                      |
+|                      | extra_slack_distribution |                         | `middle`/`edges`                                                                  | `middle`                  |                      |
+|                      | scheduling_method        |                         | `asap`/`alap`                                                                      | `alap`                    |                      |
 |                      | skip_reset_qubits        |                         | `True`/`False`                                                                                   | `False`                 |                    |
 | [environment](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |     |             |                                  | environment          |
 |                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                             |`None`                           |                      |
 |                      | job_tags                 |                         |List of tags                                                                     |`None`                           |                      |
+|                      | private                  |                         |`True`/`False`                                                                      |`False`                           |                      |
 | [execution](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2)            |                          |                         |               |                           | execution            |
 |                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |                      |
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.       | Given by `backend.default_rep_delay`.|                      |
@@ -85,6 +86,7 @@ Scroll to see the full table.
 |                      |                          | shots_per_randomization |  integer >= 1                                                                         |  `128`                    |                      |
 |                      |                          | num_randomizations      |   integer >= 1                                                                            |  `32`                    |                      |
 |                      |                          | layer_pair_depths       |  list[int] of 2-10 values in the range [0, 200]                           | `(0, 1, 2, 4, 16, 32)`              |                      |
+|                      | [layer_noise_model](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2#layer_noise_model)       |        | `NoiseLearnerResult`/`Sequence[LayerError]`                      | `None`                      |                      |
 |                      | measure_mitigation       |        | `True`/`False`                      | `True`                      |                      |
 |                      | [measure_noise_learning](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions)   | num_randomizations      |  integer >= 1  | `32`                      |                      |
 |                      |                          | shots_per_randomization |  integer                                                                                | 'auto'                    |                      |
@@ -94,7 +96,8 @@ Scroll to see the full table.
 |                      | zne_mitigation           |                         | `True`/`False`                                                                         | `False`                     |                      |
 |                      | [zne](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions)                      | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
 |                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
-|                      |                          | extrapolator            | one or more of `'exponential'`<br />`'linear'`<br />`'double_exponential'`<br />`'polynomial_degree_(1 <= k <= 7)'` | (`'exponential'`, `'linear'`) |                      |
+|                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
+|                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
 | [resilience_level](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
 | [seed_estimator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)       |                          |                         |  integer         |     `None`               |   seed_estimator   |
 | [simulator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                |                     |   simulator   |
@@ -105,9 +108,9 @@ Scroll to see the full table.
 | [twirling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions)             |                          |                         |             |                       |     twirling     |
 |                      | enable_gates             |                         | `True`/`False`                                                                           | `False`                     |                      |
 |                      | enable_measure           |                         | `True`/`False`                                                                       | `True`                      |                      |
-|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `'auto'`                    |                      |
-|                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                      | `'auto'`                    |                      |
-|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                                | `'active-accum'`            |                      |
+|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `auto`                    |                      |
+|                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                      | `auto`                    |                      |
+|                      | strategy                 |                         | `active`<br />`active-circuit`<br />`active-accum`<br />`all`                                | `active-accum`            |                      |
 | experimental         |                          |                         |                           |                        |                    |
 |                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*            | None                   |                    |
   </TabItem>
@@ -118,16 +121,18 @@ Scroll to see the full table.
 | [default_shots](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)        |                          |         |  Integer in the range[0, `backend.max_shots`]       | `4096`     | default_shots     |
 | [dynamical_decoupling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) |      |                         |                                   |                  | dynamical_decoupling     |
 |                      | enable                   |                         | `True`/`False`                                                                                   |    `False`           |                     |
-|                      | sequence_type            |                         | `'XX'`/`'XpXm'`/`'XY4'`                                                                         | `'XX'`                 |                    |
-|                      | extra_slack_distribution |                         | `'middle'`/`'edges'`                                                                          | `'middle'`                  |                    |
-|                      | scheduling_method        |                         | `'asap'`/`'alap'`                                                                            | `'alap'`                    |                    |
+|                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                                         | `XX`                 |                    |
+|                      | extra_slack_distribution |                         | `middle`/`edges`                                                                          | `middle`                  |                    |
+|                      | scheduling_method        |                         | `asap`/`alap`                                                                            | `alap`                    |                    |
 |                      | skip_reset_qubits        |                         | `True`/`False`                                                                                   | `False`                 |                    |
 | [environment](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |                         |              |                                  |                    |
 |                      | log_level                |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                                             |`WARNING`                          |   environment   |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                                    |`None`                           |                    |
 |                      | job_tags                 |                         |List of tags                                                                              |`None`                           |                    |
+|                      | private                  |                         |`True`/`False`                                                                      |`False`                           |                      |
 | [execution](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2)            |                          |                         |                     |                           |                    |
 |                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |    execution    |
+|                      | meas_type                |                         | `classified`/`kerneled`/`avg_kerneled`                              | `classified`|                    |
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.                                | Given by `backend.default_rep_delay`.|                    |
 | [max_execution_time](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)   |       |       | Integer number of seconds in the range  [1, 10800]  | `10800` (3 hours)                      |                    |
 | [simulator](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                               |                     |    max_execution_time  |
@@ -138,9 +143,9 @@ Scroll to see the full table.
 | [twirling](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions)             |                          |                         |                           |                        |                    |
 |                      | enable_gates             |                         | `True`/`False`                                                                               | `False`                     |   twirling         |
 |                      | enable_measure           |                         | `True`/`False`                                                                               | `True`                      |                    |
-|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                        | `'auto'`                    |                    |
-|                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                        | `'auto'`                    |                    |
-|                      | strategy                 |                         | `'active'`<br />`'active-circuit'`<br />`'active-accum'`<br />`'all'`                        | `'active-accum'`            |                    |
+|                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                        | `auto`                    |                    |
+|                      | shots_per_randomization  |                         |   `auto`/ Integer no larger than `backend.max_shots`.                                        | `auto`                    |                    |
+|                      | strategy                 |                         | `active`<br />`active-circuit`<br />`active-accum`<br />`all`                        | `active-accum`            |                    |
 | experimental         |                          |                         |                           |                        |                    |
 |                      | execution_path           |                         | `gen3-turbo` *([see note](#experimental-option-note))*               | None                   |                    |
 
