--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -40,13 +40,13 @@ Example of citing IBM Quantum Composer:
 
 ## What happened to Python distributions such as Qiskit Aer, Qiskit Nature, and Qiskit Experiments?
 
-Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-terra`, now have to be installed separately.
+Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-nature`, now have to be installed separately.
 
 Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions, such as `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum™ provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features. 
 
 These separate software packages were combined into what was called the Qiskit *metapackage*, which allowed users to install all of these components together through `pip install qiskit`. This metapackage architecture was removed with the release of the Qiskit SDK v1.0, and now each of the individual software distributions needs to be installed separately. 
 
-Visit the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) to find the package to suit your needs. You can also read the [v1.0 migration guide](/migration-guides/qiskit-1.0-installation#why-these-changes-happened) for more information about this change.
+If you want to install the packages that used to be included in the Qiskit metapackage, visit the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) to find a range of packages to suit your needs. You can also read the [v1.0 migration guide](/migration-guides/qiskit-1.0-installation#why-these-changes-happened) for more information about this change.
 
 ## Why do I receive the error message "AttributeError: `QuantumCircuit` object has no attribute `save_state`" when using `save_*`method on a circuit?
   
