--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "For utility-scale experiments, PEA is often the best choice.\n",
     "\n",
-    "Because PEA is a ZNE noise amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other [`resilience.zne`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOption) options can be used in addition to set extrapolators, amplification levels, and so on. PEA requires a noise model, which is automatically generated when using primitives.\n",
+    "Because PEA is a ZNE noise amplification technique, you also need to enable ZNE by setting `resilience.zne_mitigation = True`. Other [`resilience.zne`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions) options can be used in addition to set extrapolators, amplification levels, and so on. PEA requires a noise model, which is automatically generated when using primitives.\n",
     "\n",
     "The following snippet provides an example where PEA is used to mitigate the result of an Estimator job:"
    ]
