--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -9,7 +9,7 @@ description: How to manage costs of running jobs on QPUs when using the Standard
 The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs on simulators. Use the information in this topic to help you understand how much you’re paying and how to limit your costs.
 
 <Admonition type="note">
-  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud.  There are no costs associated with IBM Quantum&trade; Platform Open plan.
+  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud&reg;.  There are no costs associated with IBM Quantum&trade; Platform Open plan.
 </Admonition>
 
 ## Set a cost limit
@@ -44,7 +44,7 @@ These are the fields relevant to cost:
 
 - **Billing cycle usage**: The amount of _quantum time_ used by this instance during the current billing cycle. Quantum time is the duration a QPU is committed to fulfilling a user request.
 - **Billing cycle cost**: The total cost of running jobs during the current billing cycle.
-- **Total usage**: The amount of quantum time used by this instance since it was created. 
+- **Total usage**: The amount of quantum time used by this instance since it was created.
 - **Total cost**: The total cost of running jobs on this instance since it was created. Only administrators can set this value.
 
 You can view your billing cycle on the [Billing and usage page](https://cloud.ibm.com/billing).
@@ -60,7 +60,7 @@ These are the columns relevant to cost:
 
 ## Estimate the cost
 
-You can estimate how long a job will run, and therefore its cost, by estimating the job run time.  For details, see the [Estimate job run time](estimate-job-run-time) topic.  
+You can estimate how long a job will run, and therefore its cost, by estimating the job run time.  For details, see the [Estimate job run time](estimate-job-run-time) topic.
 
 ## Set up spending notifications
 
