Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -75,13 +75,13 @@ Whether you will work locally or in a cloud environment, the first step for all 
          <OperatingSystemTabs>
            <TabItem value="mac" label="macOS">
              ```shell
-             source .venv
+             source .venv/bin/activate
              ```
            </TabItem>
 
            <TabItem value="linux" label="Linux">
              ```shell
-             source .venv
+             source .venv/bin/activate
              ```
            </TabItem>
 
@@ -94,7 +94,7 @@ Whether you will work locally or in a cloud environment, the first step for all 
              If using Git Bash:
 
              ```text
-             .venv/source/Activate
+             source .venv/scripts/activate
              ```
               If using command prompt:
 
