--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -6,7 +6,7 @@ description: How to run a quantum computing job in a Qiskit Runtime session.
 
 # Run jobs in a session
 
-There are several ways to set up and use [sessions](sessions).  It is recommended that you do not run a session with a single job in it.
+There are several ways to set up and use [sessions](guides/execution-modes).  It is recommended that you do not run a session with a single job in it.
 
 <Admonition type="note">
 Session execution mode is not supported in the Open Plan. Jobs will run in job mode instead.
