--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "## Example\n",
     "\n",
-    "To get started, try this basic example of estimating the required QPU time to run the QESEM for a given `pub`:"
+    "To get started, try this basic example of estimating the required QPU time to run QESEM for a given `pub`:"
    ]
   },
   {
